--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -23,8 +23,9 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
+          registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -35,7 +36,9 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/parse-video:latest
+          tags: |
+            docker.io/${{ secrets.DOCKERHUB_USERNAME }}/parse-video:latest
+            docker.io/${{ secrets.DOCKERHUB_USERNAME }}/parse-video:${{ github.sha }}
           platforms: |
             linux/amd64
             linux/arm/v7
